# testing_retrieval_methods

./: .gitignore  columns-gz-decals-embeddings.txt  decals_benchmarks.py  demo_decals.py  pyproject.toml  requirements.txt
aionsearch/: __init__.py  clip_model.py  projections.py
